# pyncov-19

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: basics.ipynb
pyncov/: __init__.py  datasets.py  plot.py  pyncov.py
pyncov/data/: iso-codes.csv  population.csv
pyncov/io/: __init__.py  csv.py
tests/: test_pyncov.py
