[tool.poetry]
name = "pyncov"
version = "0.1.0"
license = "MIT"
description = "Pyncov-19 is a tiny probabilistic simulator for SARS-CoV-2"
authors = ["Pablo R. Mier <pablo.rodriguez-mier@inrae.fr>"]
repository = "https://github.com/covid19-modeling/pyncov-19"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
tqdm = { version = "^4.46.0", optional = true }

[tool.poetry.extras]
tqdm = ["tqdm"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
