[tool.poetry]
name = "pyncov"
version = "0.1.5"
license = "MIT"
description = "Pyncov-19 is a tiny probabilistic simulator for SARS-CoV-2"
authors = ["Pablo R. Mier <pablo.rodriguez-mier@inrae.fr>"]
repository = "https://github.com/covid19-modeling/pyncov-19"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.18.1"
tqdm = { version = "^4.41.0", optional = true }
pandas = { version = "^1.0.0", optional = true }
matplotlib = { version = "^3.2.1", optional = true }

[tool.poetry.extras]
all = ["tqdm", "pandas", "matplotlib"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
